--- a/opdracht-1/index.html
+++ b/opdracht-1/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="base/base-styles.css">
     <link rel="stylesheet" href="styles.css">
     <title>Opdracht 1 - selectors</title>
